--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,7 +8,7 @@ android {
     compileSdk 33
 
     defaultConfig {
-        applicationId "com.example.yaencasa"
+        applicationId 'com.qnecesitas.yaencasa'
         minSdk 24
         targetSdk 33
         versionCode 1
