--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.YaEnCasa"
         tools:targetApi="31">
         <activity
+            android:name=".Activity_Orders"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Home"
             android:exported="false" />
         <activity
