--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,12 @@
         android:theme="@style/Theme.YaEnCasa"
         tools:targetApi="31">
         <activity
+            android:name=".Activity_AdView"
+            android:exported="false" />
+        <activity
+            android:name=".Activity_InfoProduct"
+            android:exported="false" />
+        <activity
             android:name=".Activity_Zone"
             android:exported="false" />
         <activity
