Shopping_Cart is finished with one exception, the "Zona de entrega" because it depend of other activity

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,15 @@
             android:name=".Activity_Home"
             android:exported="false" />
         <activity
+            android:name=".Activity_ShowMap"
+            android:exported="false" />
+        <activity
+            android:name=".Activity_PutMap"
+            android:exported="false" />
+        <activity
+            android:name=".Activity_MyOrders"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
