--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,8 +25,10 @@
             android:name=".Activity_Zone"
             android:exported="false" />
         <activity
-            android:name=".Activity_Orders"
+            android:name=".Activity_About_Us"
             android:exported="false" />
+        <activity android:name=".Activity_About_Dev"
+            android:exported="false"/>
         <activity
             android:name=".Activity_Home"
             android:exported="false" />
