--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,11 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YaEnCasa"
         tools:targetApi="31">
+        <receiver
+            android:name=".Bradcasts.BatteryReceiver"
+            android:enabled="true"
+            android:exported="true"></receiver>
+
         <activity
             android:name=".Activity_AdView"
             android:exported="false" />
@@ -27,8 +32,9 @@
         <activity
             android:name=".Activity_About_Us"
             android:exported="false" />
-        <activity android:name=".Activity_About_Dev"
-            android:exported="false"/>
+        <activity
+            android:name=".Activity_About_Dev"
+            android:exported="false" />
         <activity
             android:name=".Activity_Home"
             android:exported="false" />
