--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,9 @@
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.POST_NOTIFICATIONS" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
 
     <application
         android:allowBackup="true"
@@ -15,10 +17,10 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.YaEnCasa"
         tools:targetApi="31">
-        <receiver
-            android:name=".Bradcasts.BatteryReceiver"
+        <service
+            android:name=".Data.Network.CheckOrdersService"
             android:enabled="true"
-            android:exported="true"></receiver>
+            android:exported="true"></service>
 
         <activity
             android:name=".Activity_AdView"
